--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -21,13 +21,13 @@
 
             <TextView
                 android:id="@+id/t1"
-                android:layout_width="200dp"
+                android:layout_width="210dp"
                 android:layout_height="40dp"
                 android:drawableStart="@drawable/ic_home_black_24dp"
-                android:text="Welcome"
+                android:text="Event Posters"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="30sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/dddown"
