--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -11,6 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="vertical">
 
         <LinearLayout
@@ -24,18 +26,18 @@
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:drawableStart="@drawable/ic_home_black_24dp"
-                android:text="Welcome"
+                android:text="Societies"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="30sp" />
 
             <Button
                 android:id="@+id/dddown"
-                android:background="@android:color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="120dp"
-                android:drawableRight="@drawable/dot"/>
+                android:background="@android:color/transparent"
+                android:drawableRight="@drawable/dot" />
 
         </LinearLayout>
 
@@ -55,16 +57,17 @@
                 <android.support.v7.widget.GridLayout
                     android:id="@+id/gridd"
                     android:layout_width="match_parent"
-                    android:layout_height="1200dp"
+                    android:layout_height="760dp"
                     android:layout_weight="16"
+                    android:padding="2dp"
                     app:alignmentMode="alignMargins"
                     app:columnCount="1"
-                    app:rowCount="12"
                     app:columnOrderPreserved="false"
-                    app:rowOrderPreserved="false"
-                    android:padding="2dp">
+                    app:rowCount="8"
+                    app:rowOrderPreserved="false">
 
                     <!-- Row 1.............................. -->
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
@@ -89,6 +92,7 @@
                             android:textColor="@color/common_google_signin_btn_text_dark_focused"
                             android:textStyle="bold" />
                     </LinearLayout>
+
                     <!-- Row 2.............................. -->
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -227,14 +231,14 @@
                             android:id="@+id/imageView2"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/s1" />
+                            android:src="@drawable/s7" />
 
                         <TextView
                             android:id="@+id/textView5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="OWASP"
+                            android:text="SAIC"
                             android:textAlignment="center"
                             android:textColor="@color/common_google_signin_btn_text_dark_focused"
                             android:textStyle="bold" />
@@ -252,120 +256,18 @@
                             android:id="@+id/imageView2"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/s2" />
+                            android:src="@drawable/s8" />
 
                         <TextView
                             android:id="@+id/textView5"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="MARS"
+                            android:text="FAPS"
                             android:textAlignment="center"
                             android:textColor="@color/common_google_signin_btn_text_dark_focused"
                             android:textStyle="bold" />
                     </LinearLayout>
-                    <!-- Row 9.............................. -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_margin="5dp"
-                        android:background="@color/cardview_light_background"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/s3" />
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Thapar food festival"
-                            android:textAlignment="center"
-                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                    <!-- Row 10.............................. -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_margin="5dp"
-                        android:background="@color/cardview_light_background"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/s4" />
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="FROSH"
-                            android:textAlignment="center"
-                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                    <!-- Row 11.............................. -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_margin="5dp"
-                        android:background="@color/cardview_light_background"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/s5" />
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Saturnalia"
-                            android:textAlignment="center"
-                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                    <!-- Row 12.............................. -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_margin="5dp"
-                        android:background="@color/cardview_light_background"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:id="@+id/imageView2"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/s6" />
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Thapar Movie Club"
-                            android:textAlignment="center"
-                            android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-
 
 
                 </android.support.v7.widget.GridLayout>
